
    Updated the definition of the Logtalk flag "prolog_version" for Ciao in
    order to compute major, minor, and patch version numbers.

    Corrected a bug in the goal_expansion/2 clauses found on the SWI-Prolog
    and YAP config files that are used for expanding calls to the Prolog
    built-in predicates phrase/2-3 with a Object::GrammarRuleBody in the
    first argument.

    Added unit tests for the "securemp" and "constraints/gprolog" examples.

    Improved the "debug_hooks" example, showing how to use a parametric hook
    object in alternative to two simple hook objects.

    Improved the "help" example by adding a helper predicate for quick access
    to the Logtalk User and Reference manuals. Added support for CxProlog.

    Added partial support for CxProlog to the "cc" example in order to support
    the "help" example.

    Updated the "multifile" example in order to avoid compilation errors when
    using a back-end Prolog compiler (such as B-Prolog) that doesn't support
    discontiguous predicates.

    Improved the "examples/tester.sh" script in order to print the current
    time and date, plus the Logtalk and back-end Prolog compiler versions,
    and to abstract the different syntax requirements for initialization
    goals used by Prolog compilers.


2.40.0 - June 16, 2010

    Bundled version 1.0 of Verdi Neruda, a meta-interpreter collection that
    includes both top-down and bottom-up search strategies. Thanks to Victor
    Lagerkvist for his contribution.

    Added experimental on-line help support using the new "help" example. See
    the example "NOTES.txt" file for a list of current operating-system and
    back-end Prolog compiler limitations.

    Changed the representation of meta-argument which are goals in the
    meta_predicate/1 directives from "::" to "0". When compiling calls
    to Prolog module meta-predicates, the meta-argument indicator ":" is
    interpreted as "0", which will work for most cases. Due to the lack of